--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
 Django==4.1.7
+django-extensions==3.2.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 order==2.1.1
+Pillow==9.4.0
 product==0.1.1.1
+PyJWT==2.6.0
 pytz==2022.7.1
 scinum==1.4.4
 six==1.16.0
